[package]
name = "bitint"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Integer types that have a logical size measured in bits."
repository.workspace = true
license.workspace = true
keywords = ["bitint", "bit", "bitfield", "bitflag"]
categories = ["data-structures", "no-std"]

[package.metadata.docs.rs]
features = ["unchecked_math", "_nightly"]

[features]
unchecked_math = []
_nightly = []
_trybuild_tests = []

[dependencies]
assume = { workspace = true }
bitint-macros = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
seq-macro = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
